# kas-tac

./: .pre-commit-config.yaml  CHANGELOG.md  COPYING  cog.toml  pyproject.toml
.github/workflows/: ci.yml  prlint.yml
